# MofIP

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/server/: CMakeLists.txt
client/: CMakeLists.txt
client/gui/: CMakeLists.txt  guiConfig.h.in  main.cpp
client/gui/MofIPGui/: CMakeLists.txt
client/gui/MofIPGui/include/: MofIPGui.hpp
client/gui/MofIPGui/include/MofIPGui/: MainWindow.hpp  norwegianwoodstyle.h  widgetgallery.h
client/gui/MofIPGui/src/: MainWindow.cpp  norwegianwoodstyle.cpp  widgetgallery.cpp
client/gui/MofIPStyle/: CMakeLists.txt
client/gui/MofIPStyle/include/: DrawComplexControl.h  DrawControl.h  DrawPrimitive.h  MofIPStyle.h  StyleUtility.h  styles.qrc
client/gui/MofIPStyle/qtStyleHints/: tabwidget.txt
client/gui/MofIPStyle/src/: DrawComplexControl.cpp  DrawControl.cpp  DrawPrimitive.cpp  MofIPStyle.cpp  StyleUtility.cpp  myStyle.cpp
client/gui/MofIPWidgets/: CMakeLists.txt
client/gui/MofIPWidgets/include/: MofipWidgets.hpp
client/gui/MofIPWidgets/include/MofIPWidgets/: MofIPPushButton.hpp  MofIPWidgetsFactory.hpp  MofipWidgetsCommon.hpp  SimpleWidget.hpp
client/gui/MofIPWidgets/include/startWindow/: CommonDefinitions.hpp  FramelessWindow.hpp  GetStartedMenuButton.hpp  GetStartedWindow.hpp  StartWindow.hpp  ToolButton.hpp
client/gui/MofIPWidgets/src/: MofIPPushButton.cpp  MofIPWidgetsFactory.cpp  MofipWidgetsCommon.cpp  SimpleWidget.cpp
client/gui/MofIPWidgets/src/startWindow/: FramelessWindow.cpp  GetStartedMenuButton.cpp  GetStartedWindow.cpp  StartWindow.cpp  ToolButton.cpp
client/gui/myStyle/: CMakeLists.txt
client/gui/myStyle/include/myStyle/: myStyle.h
client/gui/myStyle/src/: myStyle.cpp
client/gui/tempgui/: CMakeLists.txt
client/gui/tempgui/include/: mythread.hpp  temp.hpp  tempgui.hpp
client/gui/tempgui/src/: mythread.cpp  temp.cpp
cmake/: internal_utils.cmake
diagrams/: classDiagram.txt
docker/: .env  README.md  bashLocalDevLinux.bat  cleandocker.bat  docker-compose.docker-devLinux.yml  docker-compose.docker-jenkins.yml  docker-compose.yml  getJenkinsAdminPassword.bat  jenkinsKeys.bat  upAllContainers.bat  upDevLinux.bat  upDockerDevLinux.bat  upDockerJenkins.bat  upJenkins.bat  upLocalDevLinux.bat  upServerLinux.bat
docker/devLinux/: Dockerfile  docker-compose.docker-devLinux.yml
docker/jenkins/: Dockerfile  docker-compose.docker-jenkins.yml  docker-compose.jenkins.yml
docker/serverLinux/: Dockerfile  docker-compose.serverLinux.yml
libs/: CMakeLists.txt
libs/mofipobjects/: CMakeLists.txt
libs/mofipobjects/include/: mofipobjects.hpp
libs/mofipobjects/include/mofipobjects/: IOperation.hpp
libs/mofipobjects/src/: Operation.cpp
libs/temp/: CMakeLists.txt
libs/temp/include/temp/: temp.hpp
libs/temp/src/: temp.cpp
libs/temp/test/: CMakeLists.txt
libs/temp/test/src/: tempTest.cpp
tools/windows/: build.bat  configenv.bat  readme.md
